--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "marked": "^0.3.6",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "simplemde": "^1.11.2"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-brunch": "~6.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "brunch": "2.7.4",
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
