--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "bootstrap-tagsinput": "^0.7.1",
     "jquery": "^3.1.1",
     "marked": "^0.3.6",
     "phoenix": "file:deps/phoenix",
